# mapping-r-server

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md
cmake/: FindR.cmake  FindRInside.cmake
conf/: settings-default.toml
docker-files/: mapping-r-server-service.sh
docs/: configuration.md  install.md
src/: CMakeLists.txt  rcpp_wrapper.h  rinside_callbacks.h  rserver.cpp
